proj-gke/color-api/dev/use-dev-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color-api
spec:
  template:
    spec:
      containers:
      - name: color-api
        image: lmacademy/color-api:2.1.0-dev
